--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /Aula5/Aula5/build/
 /Aula6/Aula6/nbproject/private/
 /Aula6/Aula6/build/
+/Aula7/Aula7/nbproject/private/
+/Aula7/Aula7/build/
+/Aula7/Aula7/dist/
